crates/swc_ecma_react_compiler/tests/fixtures/upstream/rules-of-hooks/todo.error.rules-of-hooks-d0935abedc42/error.txt
Found 1 error:

Error: Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)

todo.error.rules-of-hooks-d0935abedc42.ts:8:4
   6 | React.unknownFunction((foo, bar) => {
   7 |   if (foo) {
>  8 |     useNotAHook(bar);
     |     ^^^^^^^^^^^ Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)
   9 |   }
  10 | });
  11 |
